chore: update circle config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,42 +1,69 @@
 version: 2.1
 orbs:
-  release-management: salesforce/npm-release-management@4
   win: circleci/windows@2
+  slack: circleci/slack@3.4.2
 
 jobs:
   test-macos-installation:
+    parameters:
+        method:
+          description: installation method
+          type: enum
+          enum: ['tarball', 'npm', 'installer']
+        cli:
+          description: cli to test
+          type: enum
+          enum: ['sf', 'sfdx']
     macos:
       xcode: 12.5.1
     steps:
-      - release-management/install-sf-release
-      - run: sf-release cli:install:test --cli sf --method installer
-      - run: sf-release cli:install:test --cli sf --method npm
-      - run: sf-release cli:install:test --cli sf --method tarball
-      - run: sf-release cli:install:test --cli sfdx --method installer
-      - run: sf-release cli:install:test --cli sfdx --method npm
-      - run: sf-release cli:install:test --cli sfdx --method tarball
-  test-linux-installation:
-    docker:
-      - image: node:lts
-    resource_class: xlarge
-    steps:
-      - release-management/install-sf-release
-      - run: sf-release cli:install:test --cli sf --method npm
-      - run: sf-release cli:install:test --cli sf --method tarball
-      - run: sf-release cli:install:test --cli sfdx --method npm
-      - run: sf-release cli:install:test --cli sfdx --method tarball
+      - run: npm install -g @salesforce/plugin-release-management
+      - run: sf-release cli:install:test --cli << parameters.cli >> --method << parameters.method >>
+      - slack/status:
+          channel: 'cli-team-alerts'
+          fail_only: true
+          failure_message: 'CLI installation test failed. OS: macos, CLI: << parameters.cli >>, Method: << parameters.method >>'
+
   test-windows-installation:
+    parameters:
+      method:
+        description: installation method
+        type: enum
+        enum: ['tarball', 'npm', 'installer']
+      cli:
+        description: cli to test
+        type: enum
+        enum: ['sf', 'sfdx']
     executor:
       name: win/default
       size: xlarge
     steps:
-      - release-management/install-sf-release
-      - run: sf-release cli:install:test --cli sf --method installer
-      - run: sf-release cli:install:test --cli sf --method npm
-      - run: sf-release cli:install:test --cli sf --method tarball
-      - run: sf-release cli:install:test --cli sfdx --method installer
-      - run: sf-release cli:install:test --cli sfdx --method npm
-      - run: sf-release cli:install:test --cli sfdx --method tarball
+      - run: npm install -g @salesforce/plugin-release-management
+      - run: sf-release cli:install:test --cli << parameters.cli >> --method << parameters.method >>
+      - slack/status:
+          channel: 'cli-team-alerts'
+          fail_only: true
+          failure_message: 'CLI installation test failed. OS: windows, CLI: << parameters.cli >>, Method: << parameters.method >>'
+
+  test-linux-installation:
+    parameters:
+      method:
+        description: installation method
+        type: enum
+        enum: ['tarball', 'npm', 'installer']
+      cli:
+        description: cli to test
+        type: enum
+        enum: ['sf', 'sfdx']
+    docker:
+      - image: node:lts
+    steps:
+      - run: npm install -g @salesforce/plugin-release-management
+      - run: sf-release cli:install:test --cli << parameters.cli >> --method << parameters.method >>
+      - slack/status:
+          channel: 'cli-team-alerts'
+          fail_only: true
+          failure_message: 'CLI installation test failed. OS: linux, CLI: << parameters.cli >>, Method: << parameters.method >>'
 
 workflows:
   version: 2
@@ -49,6 +76,69 @@ workflows:
               only:
                 - main
     jobs:
-      - test-macos-installation
-      - test-linux-installation
-      - test-windows-installation
+      - test-macos-installation:
+          name: test-macos-sf-installer
+          cli: sf
+          method: installer
+      - test-macos-installation:
+          name: test-macos-sfdx-installer
+          cli: sfdx
+          method: installer
+      - test-macos-installation:
+          name: test-macos-sf-npm
+          cli: sf
+          method: npm
+      - test-macos-installation:
+          name: test-macos-sfdx-npm
+          cli: sfdx
+          method: npm
+      - test-macos-installation:
+          name: test-macos-sf-tarball
+          cli: sf
+          method: tarball
+      - test-macos-installation:
+          name: test-macos-sfdx-tarball
+          cli: sfdx
+          method: tarball
+
+      - test-windows-installation:
+          name: test-windows-sf-installer
+          cli: sf
+          method: installer
+      - test-windows-installation:
+          name: test-windows-sfdx-installer
+          cli: sfdx
+          method: installer
+      - test-windows-installation:
+          name: test-windows-sf-npm
+          cli: sf
+          method: npm
+      - test-windows-installation:
+          name: test-windows-sfdx-npm
+          cli: sfdx
+          method: npm
+      - test-windows-installation:
+          name: test-windows-sf-tarball
+          cli: sf
+          method: tarball
+      - test-windows-installation:
+          name: test-windows-sfdx-tarball
+          cli: sfdx
+          method: tarball
+
+      - test-linux-installation:
+          name: test-linux-sf-npm
+          cli: sf
+          method: npm
+      - test-linux-installation:
+          name: test-linux-sfdx-npm
+          cli: sfdx
+          method: npm
+      - test-linux-installation:
+          name: test-linux-sf-tarball
+          cli: sf
+          method: tarball
+      - test-linux-installation:
+          name: test-linux-sfdx-tarball
+          cli: sfdx
+          method: tarball
