--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,7 @@ workflows:
   installation-test:
     triggers:
       - schedule:
-          cron: 0 * * * *
+          cron: 0 9 * * *
           filters:
             branches:
               only:
