chore: update cron schedule to every hour

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -161,8 +161,7 @@ workflows:
   installers:
     triggers:
       - schedule:
-          # Everyday at 10am Mountain Time
-          cron: 0 16 * * *
+          cron: 0 * * * *
           <<: *only-main
     jobs:
       - test-macos-installation:
@@ -176,8 +175,7 @@ workflows:
   npm:
     triggers:
       - schedule:
-          # Everyday at 10am Mountain Time
-          cron: 0 16 * * *
+          cron: 0 * * * *
           <<: *only-main
     jobs:
       - test-macos-installation:
@@ -195,8 +193,7 @@ workflows:
   tarballs:
     triggers:
       - schedule:
-          # Everyday at 10am Mountain Time
-          cron: 0 16 * * *
+          cron: 0 * * * *
           <<: *only-main
     jobs:
       - test-macos-installation:
