chore: only report success metrics with 0 or 1

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -170,13 +170,11 @@ jobs:
             echo "$failures"
 
             echo "Sending metrics:"
-            # Passed [sfdx/stable-rc/installer/macos - https://circleci.com/gh/salesforcecli/status/925] -> count#platform-cli.sfdx.stable-rc.installer.macos.success=1
-            # Failed [sfdx/stable-rc/installer/macos - https://circleci.com/gh/salesforcecli/status/925] -> count#platform-cli.sfdx.stable-rc.installer.macos.fail=1
             cat /tmp/workspace/* | while read line
             do
               base="platform-cli".$(echo $line | grep -oP '(?<=\[).*(?=\])' | cut -f1 -d"|" | tr '/' '.' | xargs)
-              [[ "$line" == *"Passed"* ]] && status="success" || status="fail"
-              heroku-buildpack-l2met-shuttle/support/start-l2met-shuttle echo "count#$base.$status=1"
+              [[ "$line" == *"Passed"* ]] && status="1" || status="0"
+              heroku-buildpack-l2met-shuttle/support/start-l2met-shuttle echo "count#$base.success=$status"
             done
 
             if [[ ! -z "$failures" ]]; then
