--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -170,6 +170,16 @@ jobs:
             echo "$failures"
 
             echo "Sending metrics:"
+            
+            # The while loop below retrieves the files in /tmp/workspace that were placed there by the test-*-installation jobs and
+            #   parses their name and content to create and send the metrics using l2met-shuttle.
+            # The name of the file is used to construct the metric
+            #   Examples:
+            #     sfdx/stable-rc/installer/macos -> count#platform-cli.sfdx.stable-rc.installer.macos.success
+            #     sf/stable/npm/windows -> count#platform-cli.sf.stable.npm.windows.success
+            # And the content of the file is used to define the value
+            #   "Passed" -> count#platform-cli.sfdx.stable-rc.installer.macos.success=1
+            #   "Failed" -> count#platform-cli.sfdx.stable-rc.installer.macos.success=0
             cat /tmp/workspace/* | while read line
             do
               base="platform-cli".$(echo $line | grep -oP '(?<=\[).*(?=\])' | cut -f1 -d"|" | tr '/' '.' | xargs)
