chore: pin all the things

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -112,7 +112,7 @@ jobs:
     steps:
       - attach_workspace:
           at: C:\tmp\workspace\
-      - run: npm install -g @salesforce/plugin-release-management@latest
+      - run: npm install -g @salesforce/plugin-release-management@2
       - run:
           name: Test installation on windows
           command: |
@@ -137,7 +137,7 @@ jobs:
       - jq/install
       - attach_workspace:
           at: /tmp/workspace
-      - run: npm install -g @salesforce/plugin-release-management@latest
+      - run: npm install -g @salesforce/plugin-release-management@2
       - run:
           name: Test installation on linux
           command: |
