--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -39,6 +39,7 @@ jobs:
 
     runs-on: ${{ inputs.runs-on }}
     steps:
+      - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: latest
