ci: more methods, both CLIs

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -33,6 +33,9 @@ on:
 
 jobs:
   install:
+    env:
+      AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
+      AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
     outputs:
       metricName: count#${{inputs.base}}.${{ inputs.runs-cli }}.${{ inputs.channel }}.${{ inputs.method }}.${{ steps.lowercaseOS.outputs.lowercase }}.success
       metricValue: ${{ steps.step2.outputs.secondword }}
