ci: name channel stable

--- a/.github/workflows/monitoring.yml
+++ b/.github/workflows/monitoring.yml
@@ -15,6 +15,6 @@ jobs:
     with:
       method: tarball
       cli: ${{ matrix.cli }}
-      channel: latest
+      channel: stable
       runs-on: ${{ matrix.runs-on }}
     secrets: inherit
