ci: echo status

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -54,7 +54,9 @@ jobs:
         continue-on-error: true
 
       - if: steps.lowercaseOS.outputs.lowercase != 'windows'
-        run: echo "::set-output name=status::$(jq .status test-results.json)"
+        run: |
+          echo: "status is $(jq .status test-results.json)"
+          echo "::set-output name=status::$(jq .status test-results.json)"
         continue-on-error: true
 
       - if: steps.lowercaseOS.outputs.lowercase == 'windows'
