--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -55,7 +55,7 @@ jobs:
 
       - if: steps.lowercaseOS.outputs.lowercase != 'windows'
         run: |
-          echo: "status is $(jq .status test-results.json)"
+          echo "status is $(jq .status test-results.json)"
           echo "::set-output name=status::$(jq .status test-results.json)"
         continue-on-error: true
 
