--- a/.github/workflows/monitoring.yml
+++ b/.github/workflows/monitoring.yml
@@ -8,7 +8,7 @@ jobs:
       fail-fast: false
       matrix:
         # runs-on: [ubuntu-latest, windows-latest, macos-latest]
-        runs-on: [ubuntu-latest]
+        runs-on: [windows-latest, ubuntu-latest]
         cli: [sfdx, sf]
         method: [tarball, npm, installer]
         channel: [stable, stable-rc]
