--- a/.github/workflows/monitoring.yml
+++ b/.github/workflows/monitoring.yml
@@ -44,4 +44,4 @@ jobs:
           git clone https://github.com/heroku/heroku-buildpack-l2met-shuttle.git
           heroku-buildpack-l2met-shuttle/bin/compile .
           # heroku-buildpack-l2met-shuttle/support/start-l2met-shuttle echo "count#$base.success=$status"
-      - run: echo ${{ needs.check }}
+      - run: echo ${{ toJSON(needs.check) }}
