--- a/.github/workflows/monitoring.yml
+++ b/.github/workflows/monitoring.yml
@@ -7,8 +7,9 @@ jobs:
     strategy:
       matrix:
         # runs-on: [ubuntu-latest, windows-latest, macos-latest]
-        runs-on: [ubuntu-latest]
-        cli: [sfdx, sf]
+        runs-on: [ubuntu-latest, windows-latest]
+        # cli: [sfdx, sf]
+        cli: [sfdx]
         # method: [tarball, npm, installer]
         method: [tarball]
         # channel: [stable, stable-rc]
