ci: report as a separate workflow

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -23,13 +23,6 @@ on:
         type: string
         description: platform-cli (do not change)
         default: platform-cli
-    outputs:
-      metricName:
-        description: name of the job
-        value: ${{ jobs.install.outputs.metricName }}
-      metricValue:
-        description: status (0 for pass, 1 for fail)
-        value: ${{ jobs.install.outputs.metricValue }}
 
 jobs:
   install:
@@ -37,8 +30,6 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
       AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
     outputs:
-      metricName: count#${{inputs.base}}.${{ inputs.runs-cli }}.${{ inputs.channel }}.${{ inputs.method }}.${{ steps.lowercaseOS.outputs.lowercase }}.success
-      metricValue: ${{ steps.posix.outputs.metricValue || steps.windows.outputs.metricValue }}
 
     runs-on: ${{ inputs.runs-on }}
     steps:
@@ -70,3 +61,7 @@ jobs:
           echo "status is $status"
         shell: pwsh
         continue-on-error: true
+      - uses: ./.github/workflows/report.yml
+        with:
+          metricName: count#${{inputs.base}}.${{ inputs.runs-cli }}.${{ inputs.channel }}.${{ inputs.method }}.${{ steps.lowercaseOS.outputs.lowercase }}.success
+          metricValue: ${{ steps.posix.outputs.metricValue || steps.windows.outputs.metricValue }}
